--- a/FSharp.AspNetCore.WebAppBuilder/FSharp.AspNetCore.WebAppBuilder.fsproj
+++ b/FSharp.AspNetCore.WebAppBuilder/FSharp.AspNetCore.WebAppBuilder.fsproj
@@ -4,14 +4,14 @@
     <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>FSharp.AspNetCore.WebAppBuilder</PackageId>
-    <Version>0.1.0-alpha.3</Version>
+    <Version>0.1.0-alpha.4</Version>
     <Authors>Brian Rourke Boll</Authors>
     <Description>A computation expression for succinctly defining ASP.NET Core web apps, including support for minimal APIs.</Description>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/brianrourkeboll/FSharp.AspNetCore.WebAppBuilder</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-    <PackageTags>F#;FSharp;aspnetcore</PackageTags>
+    <PackageTags>F#;fsharp;aspnetcore</PackageTags>
     <PackageIcon>logo.png</PackageIcon>
     <Copyright>© 2023 Brian Rourke Boll</Copyright>
     <!-- FS3390: XML documentation validation -->
