--- a/FSharp.AspNetCore.WebAppBuilder/FSharp.AspNetCore.WebAppBuilder.fsproj
+++ b/FSharp.AspNetCore.WebAppBuilder/FSharp.AspNetCore.WebAppBuilder.fsproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>FSharp.AspNetCore.WebAppBuilder</PackageId>
-    <Version>0.1.0-alpha.4</Version>
+    <Version>0.1.0-alpha.5</Version>
     <Authors>Brian Rourke Boll</Authors>
     <Description>A computation expression for succinctly defining ASP.NET Core web apps, including support for minimal APIs.</Description>
     <RepositoryType>git</RepositoryType>
@@ -13,6 +13,8 @@
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageTags>F#;fsharp;aspnetcore</PackageTags>
     <PackageIcon>logo.png</PackageIcon>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <Copyright>© 2023 Brian Rourke Boll</Copyright>
     <!-- FS3390: XML documentation validation -->
     <WarnOn>$(WarnOn);3390</WarnOn>
