--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -3,10 +3,15 @@ name: Publish docs to GitHub Pages
 on:
   push:
     branches: [ "main" ]
-    
+
 permissions:
+  contents: read
   pages: write
   id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build-docs:
@@ -14,34 +19,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 7.x
+        dotnet-version: 8.x
     - name: Set up GitHub Pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages@v5
     - name: Restore dotnet tools
       run: dotnet tool restore
     - name: Restore dotnet projects
       run: dotnet restore
     - name: Build
-      run: dotnet build ./FSharp.AspNetCore.WebAppBuilder/FSharp.AspNetCore.WebAppBuilder.fsproj -c Release -f net7.0
+      run: dotnet build ./FSharp.AspNetCore.WebAppBuilder/FSharp.AspNetCore.WebAppBuilder.fsproj -c Release -f net8.0
     - name: Copy readme to docs folder
       run: cp README.md docs/index.md
     - name: Build docs
       run: |
         dotnet fsdocs build \
           --output ./out \
-          --properties Configuration=Release TargetFramework=net7.0 \
+          --properties Configuration=Release TargetFramework=net8.0 \
           --parameters \
             fsdocs-license-link https://github.com/brianrourkeboll/FSharp.AspNetCore.WebAppBuilder/blob/main/LICENSE.md \
             fsdocs-release-notes-link https://github.com/brianrourkeboll/FSharp.AspNetCore.WebAppBuilder/releases
     - name: Upload GitHub Pages artifact
-      uses: actions/upload-pages-artifact@v1
+      uses: actions/upload-pages-artifact@v3
       with:
         path: './out'
-  
+
   publish-docs:
 
     needs: build-docs
@@ -53,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v1
+      uses: actions/deploy-pages@v4
